tests/baselines/reference/blockScopedFunctionDeclarationStrictES5.errors.txt
tests/cases/compiler/blockScopedFunctionDeclarationStrictES5.ts(6,1): error TS2304: Cannot find name 'foo'.


==== tests/cases/compiler/blockScopedFunctionDeclarationStrictES5.ts (1 errors) ====
    "use strict";
    if (true) {
        function foo() { } // Error to declare function in block scope
        foo(); // This call should be ok
    }
    foo(); // Error to find name foo
    ~~~
!!! error TS2304: Cannot find name 'foo'.